--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
   "require" : {
-    "silex/silex": "~1.1",
-    "monolog/monolog": "~1.7"
+    "silex/silex": "~1.2",
+    "monolog/monolog": "~1.12",
+    "twig/twig": "~1.18"
   },
   "require-dev": {
     "heroku/heroku-buildpack-php": "*"
