--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,7 @@
   "require" : {
     "silex/silex": "~1.2",
     "monolog/monolog": "~1.12",
-    "twig/twig": "~1.18",
-    "herrera-io/silex-pdo": "~1.2"
+    "twig/twig": "~1.18"
   },
   "require-dev": {
     "heroku/heroku-buildpack-php": "*"
